fixed dropdown overflow

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -21,7 +21,6 @@
 
 .left-container {
     width: 30%;
-    height: 100%;
     padding-right: 20px;
     border-right: 1px #b6b6b6 solid;
 }
@@ -137,8 +136,9 @@ img {
         align-items: center;
         flex-direction: column;
         padding: 0 20px;
+        box-sizing: border-box;
     }
-    
+
     .right-container {
         width: 100%;
     }
